media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  selector:
    matchLabels:
      app: jellyfin
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
      annotations:
        backup.velero.io/backup-volumes-excludes: jellyfin-media
    spec:
      runtimeClassName: nvidia
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
        - name: jellyfin-media
          persistentVolumeClaim:
            claimName: pvc-media-nfs
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.9 # {"$imagepolicy": "flux-system:jellyfin-image-policy"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8096
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: jellyfin-media
              mountPath: /media
          resources:
            requests:
              memory: "2Gi"
              cpu: "2000m"
              nvidia.com/gpu: "1"
            limits:
              memory: "4Gi"
              cpu: "4000m"
              nvidia.com/gpu: "1"
